fusion de la rama master a jesus

--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -7,7 +7,7 @@
     <input type="hidden" formControlName="id"/>
     <div class="formgrid grid">
       <div class="field col-12 md:col-4">
-        <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-user"></i> Datos personales</p>
+        <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="fa-solid fa-user"></i> Datos personales</p>
         <span class="p-float-label m-2">
             <input pInputText id="nombre" type="text" [readonly]="true" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
             <label htmlFor="nombre">Nombre</label>
@@ -23,7 +23,7 @@
       </div>
 
       <div class="field col-12 md:col-4">
-        <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-phone"></i> Datos de contactos</p>
+        <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="fa-solid fa-phone"></i>  Datos de contacto</p>
         <span class="p-float-label m-2">
             <input pInputText id="provincia" type="text" [readonly]="true" class="w-full" aria-describedby="provincia-ayuda" formControlName="provincia">
             <label htmlFor="provincia">Provincia</label>
