--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -33,11 +33,12 @@
           </ng-template>
           <ng-template pTemplate="content">
             <div [style]="{ height: '40px' }">
+              <!--            TODO  Darle formato a las burbujas-->
               <p-tag class="m-1" *ngIf="favor.fumar" value="Fumar" [rounded]="true"></p-tag>
               <p-tag class="m-1" *ngIf="favor.internet" value="Internet" [rounded]="true"></p-tag>
               <p-tag class="m-1" *ngIf="favor.mascota" value="Mascota" [rounded]="true"></p-tag>
               <p-tag class="m-1" *ngIf="favor.climatizacion" value="Climatización" [rounded]="true"></p-tag>
-              <p-tag class="m-1" *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado" [rounded]="true"></p-tag>
+              <p-tag class="m-1" *ngIf="favor.adaptadoMovilidadReducida" value="Adaptado movilidad reducida" [rounded]="true"></p-tag>
             </div>
           </ng-template>
           <ng-template pTemplate="footer">
@@ -46,9 +47,9 @@
               <div *ngIf="favorDialogo != null">
                 <p>Nombre: {{favorDialogo.usuario.nombre}}</p>
                 <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
-                <p>Dirección: {{favorDialogo.direccion}}</p>
+                <p>Dirección: {{favorDialogo.usuario.direccion.direccion}}</p>
                 <p>Email: {{favorDialogo.usuario.email}}</p>
-                <p>Telefono: {{favorDialogo.usuario.telefono}}</p>
+                <p>Telefono: {{favorDialogo.telefono}}</p>
               </div>
             </p-dialog>
           </ng-template>
