--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -1,4 +1,7 @@
 <p-card class="m-3">
+  <div *ngIf="pruebasDesarrollo" style="background-color: darkseagreen">
+    <p>{{formFavor.value | json}}</p>
+  </div>
   <h2>Crear un Favor</h2>
   <form [formGroup]="formFavor" (ngSubmit)="validarFavor()" class="mt-4">
     <input type="hidden" formControlName="id"/>
@@ -6,75 +9,85 @@
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-user"></i> Datos personales</p>
         <span class="p-float-label m-2">
-            <input pInputText id="nombre" type="text" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
+            <input pInputText id="nombre" type="text" [readonly]="true" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
             <label htmlFor="nombre">Nombre</label>
           </span>
         <span class="p-float-label m-2">
-            <input pInputText id="primerAp" type="text" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
+            <input pInputText id="primerAp" type="text" [readonly]="true" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
             <label htmlFor="primerAp">Primer Apellido</label>
           </span>
         <span class="p-float-label m-2">
-            <input pInputText id="segundoAp" type="text" class="w-full" aria-describedby="segundoAp-ayuda" formControlName="segundoAp">
+            <input pInputText id="segundoAp" type="text" [readonly]="true" class="w-full" aria-describedby="segundoAp-ayuda" formControlName="segundoAp">
             <label htmlFor="segundoAp">Segundo Apellido</label>
-          </span>
-        <div class="m-2">
-          <p-dropdown placeholder="Elija una provincia" inputId="idProvincia"  optionValue="id" formControlName="idProvincia" [options]="provincias" optionLabel="nombre"></p-dropdown>
-        </div>
-        <span class="p-float-label m-2">
-            <input type="file"  formControlName="foto">
           </span>
       </div>
 
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-phone"></i> Datos de contactos</p>
         <span class="p-float-label m-2">
-            <input pInputText id="telefono" type="tel" class="w-full" aria-describedby="telefono-ayuda" formControlName="telefono">
-            <label htmlFor="telefono">Teléfono</label>
-          <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
+            <input pInputText id="provincia" type="text" [readonly]="true" class="w-full" aria-describedby="provincia-ayuda" formControlName="provincia">
+            <label htmlFor="provincia">Provincia</label>
           </span>
         <span class="p-float-label m-2">
-            <input pInputText id="email" type="email" class="w-full" aria-describedby="email-ayuda" formControlName="email">
+            <input pInputText id="email" type="email" [readonly]="true" class="w-full" aria-describedby="email-ayuda" formControlName="email">
             <label htmlFor="email">Email</label>
-          <!--          <small style="color: #e24c4c" id="nombre-ayuda">Debe tener entre 2 y 20 caracteres</small>-->
           </span>
+        <span class="p-float-label m-2">
+            <input pInputText id="telefono" type="tel" class="w-full" aria-describedby="telefono-ayuda" formControlName="telefono">
+            <label htmlFor="telefono">Teléfono de contacto</label>
+        </span>
       </div>
 
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
-        <div class="flex flex-column gap-2">
-            <span class="p-float-label m-2">
-            <input pInputText id="descripcion" type="text" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
-            <label htmlFor="descripcion">Descripción</label>
-            </span>
+        <div class="gap-2">
+          <span class="p-float-label m-2">
+              <input pInputText id="descripcion" type="text" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
+              <label htmlFor="descripcion">Título</label>
+          </span>
+          <span class="p-float-label m-2">
+              <input pInputText id="Foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
+              <label htmlFor="foto">Foto</label>
+          </span>
           <label>
-            <p-checkbox formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
+            <p-checkbox class="ml-2" formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
             <span> Fumar</span>
           </label>
           <label>
-            <p-checkbox formControlName="internet" [binary]="true" inputId="internet"></p-checkbox>
+            <p-checkbox class="ml-2" formControlName="internet" [binary]="true" inputId="internet"></p-checkbox>
             <span> Internet</span>
           </label>
           <label>
-            <p-checkbox formControlName="mascota" [binary]="true" inputId="mascota"></p-checkbox>
+            <p-checkbox class="ml-2" formControlName="mascota" [binary]="true" inputId="mascota"></p-checkbox>
             <span> Mascota</span>
           </label>
           <label>
-            <p-checkbox formControlName="climatizacion" [binary]="true" inputId="climatizacion"></p-checkbox>
+            <p-checkbox class="ml-2" formControlName="climatizacion" [binary]="true" inputId="climatizacion"></p-checkbox>
             <span> Climatización</span>
           </label>
-          <label>
-            <p-checkbox formControlName="adaptadoMovilidadReducida" [binary]="true" inputId="adaptadoMovilidadReducida"></p-checkbox>
-            <span> Adaptación movilidad reducida</span>
-          </label>
+          <br>
+          <div class="mt-2">
+            <label>
+              <p-checkbox class="ml-2" formControlName="adaptadoMovilidadReducida" [binary]="true" inputId="adaptadoMovilidadReducida"></p-checkbox>
+              <span> Adaptación movilidad reducida</span>
+            </label>
+          </div>
         </div>
       </div>
-      <div class="flex justify-content-end mb-2 p-3 gap-3">
+      <div class="flex justify-content-end mb-2 p-3 gap-2">
+        <p-toast position="top-center"></p-toast>
+        <p-button
+          (click)="salir()"
+          icon="pi pi-sign-out"
+          label="Salir"
+        ></p-button>
         <p-button
           (click)="borrarFormulario()"
           icon="pi pi-trash"
           label="Borrar"
         ></p-button>
         <p-button
+          (click)="mensajeGuardado()"
           icon="pi pi-save"
           label="Guardar"
           type="submit"
@@ -82,8 +95,4 @@
       </div>
     </div>
   </form>
-
-  <div style="background-color: darkseagreen">
-    <p>{{formFavor.value | json}}</p>
-  </div>
 </p-card>
