Modificacion en el dialogo para poder cerrar el dialogo.

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,6 +1,8 @@
 <p-dialog
   [(visible)]="cerrarDialogoLogin"
   [closable]="true"
+  [closeOnEscape]="true"
+  (onHide)="cerrarDialogo()"
   [modal]="true"
   [maximizable]="true"
   header="Accede con tu cuenta"
