--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -8,15 +8,15 @@
     <div class="formgrid grid">
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="fa-solid fa-user"></i> Datos personales</p>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="nombre" type="text" [readonly]="true" class="w-full" aria-describedby="nombre-ayuda" formControlName="nombre">
             <label htmlFor="nombre">Nombre</label>
           </span>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="primerAp" type="text" [readonly]="true" class="w-full" aria-describedby="primerAp-ayuda" formControlName="primerAp">
             <label htmlFor="primerAp">Primer Apellido</label>
           </span>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="segundoAp" type="text" [readonly]="true" class="w-full" aria-describedby="segundoAp-ayuda" formControlName="segundoAp">
             <label htmlFor="segundoAp">Segundo Apellido</label>
           </span>
@@ -24,15 +24,15 @@
 
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="fa-solid fa-phone"></i>  Datos de contacto</p>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="provincia" type="text" [readonly]="true" class="w-full" aria-describedby="provincia-ayuda" formControlName="provincia">
             <label htmlFor="provincia">Provincia</label>
           </span>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="email" type="email" [readonly]="true" class="w-full" aria-describedby="email-ayuda" formControlName="email">
             <label htmlFor="email">Email</label>
           </span>
-        <span class="p-float-label m-2">
+        <span class="p-float-label mt-4">
             <input pInputText id="telefono" type="tel" class="w-full" aria-describedby="telefono-ayuda" formControlName="telefono">
             <label htmlFor="telefono">Teléfono de contacto</label>
         </span>
@@ -41,11 +41,11 @@
       <div class="field col-12 md:col-4">
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
         <div class="gap-2">
-          <span class="p-float-label m-2">
+          <span class="p-float-label mt-4">
               <input pInputText id="descripcion" type="text" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
               <label htmlFor="descripcion">Título</label>
           </span>
-          <span class="p-float-label m-2">
+          <span class="p-float-label my-4">
               <input pInputText id="Foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
               <label htmlFor="foto">Foto</label>
           </span>
@@ -74,25 +74,31 @@
           </div>
         </div>
       </div>
-      <div class="flex justify-content-end mb-2 p-3 gap-2">
-        <p-toast position="top-center"></p-toast>
-        <p-button
-          (click)="salir()"
-          icon="pi pi-sign-out"
-          label="Salir"
-        ></p-button>
-        <p-button
-          (click)="borrarFormulario()"
-          icon="pi pi-trash"
-          label="Borrar"
-        ></p-button>
-        <p-button
-          (click)="mensajeGuardado()"
-          icon="pi pi-save"
-          label="Guardar"
-          type="submit"
-        ></p-button>
-      </div>
+      <p-toast position= "top-center"></p-toast>
     </div>
+      <div class="flex justify-content-end flex-wrap p-3 gap-2">
+        <div class="flex align-items-center justify-content-center">
+          <p-button
+            (click)="salir()"
+            icon="fa-solid fa-cancel"
+            label="Cancelar"
+          ></p-button>
+        </div>
+        <div class="flex align-items-center justify-content-center">
+          <p-button
+            (click)="borrarFormulario()"
+            icon="fa-solid fa-trash"
+            label="Borrar"
+          ></p-button>
+        </div>
+        <div class="flex align-items-center justify-content-center">
+          <p-button
+            (click)="mensajeGuardado()"
+            icon="fa-solid fa-save"
+            label="Guardar"
+            type="submit"
+          ></p-button>
+        </div>
+      </div>
   </form>
 </p-card>
