--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -1,15 +1,14 @@
 <p-menubar class="nav" [model]="items">
-  <ng-template pTemplate="start" style="">
-    <img src="./assets/img/logo.png" class="logo md:pr-8" alt="Logotipo de RoomSwapp"  />
+  <!--Logo de RoomSwapp-->
+  <ng-template pTemplate="start">
+    <img src="./assets/img/logo.png" class="logo" alt="Logotipo de RoomSwapp"  />
   </ng-template>
+
+  <!--Opciones de navegación-->
   <ng-template pTemplate="end">
-<!--    <p>{{this.usuarioActivo.usuarioActivo?.email}}</p>-->
-    <div *ngIf="usuarioActivo.usuarioActivo?.nombre != '' && usuarioActivo.usuarioActivo?.nombre != undefined">
-      <p-tag styleClass="p-2" [rounded]="true">{{"Bienvenido, " + this.usuarioActivo.usuarioActivo?.nombre}}</p-tag>
-    </div>
-<!--
-    <img src="./assets/img/usuario.png" class="logo" alt="Avatar de usuario"  />
--->
+        <div *ngIf="usuarioActivo.usuarioActivo?.nombre != '' && usuarioActivo.usuarioActivo?.nombre != undefined">
+          <p-tag styleClass="p-2" [rounded]="true">{{"Bienvenido, " + this.usuarioActivo.usuarioActivo?.nombre}}</p-tag>
+        </div>
   </ng-template>
 </p-menubar>
 
