--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -1,4 +1,4 @@
-<p-card class="m-3">
+<p-card styleClass="mt-4">
   <div *ngIf="pruebasDesarrollo" style="background-color: darkseagreen">
     <p>{{formFavor.value | json}}</p>
   </div>
@@ -42,12 +42,14 @@
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
         <div class="gap-2">
           <span class="p-float-label mt-4">
-              <input pInputText id="descripcion" type="text" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
+              <input pInputText id="descripcion" type="text" maxlength="20" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
               <label htmlFor="descripcion">Título</label>
+              <small *ngIf="esCampoInvalido('descripcion')" style="color: #e24c4c" id="descripcion-ayuda">Introduzca el título</small>
           </span>
           <span class="p-float-label my-4">
-              <input pInputText id="Foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
+              <input pInputText id="foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
               <label htmlFor="foto">Foto</label>
+              <small *ngIf="esCampoInvalido('foto')" style="color: #e24c4c" id="foto-ayuda">Introduzca una foto</small>
           </span>
           <label>
             <p-checkbox class="ml-2" formControlName="fumar" [binary]="true" inputId="fumar"></p-checkbox>
@@ -79,13 +81,6 @@
       <div class="flex justify-content-end flex-wrap p-3 gap-2">
         <div class="flex align-items-center justify-content-center">
           <p-button
-            (click)="salir()"
-            icon="fa-solid fa-cancel"
-            label="Cancelar"
-          ></p-button>
-        </div>
-        <div class="flex align-items-center justify-content-center">
-          <p-button
             (click)="borrarFormulario()"
             icon="fa-solid fa-trash"
             label="Borrar"
@@ -93,9 +88,19 @@
         </div>
         <div class="flex align-items-center justify-content-center">
           <p-button
+            (click)="marcarTodosLosCampos()"
+            icon="fa-solid fa-eye"
+            label="Verificar"
+            [styleClass]="'p-button-info'"
+          ></p-button>
+        </div>
+        <div class="flex align-items-center justify-content-center">
+          <p-button
             icon="fa-solid fa-save"
             label="Guardar"
             type="submit"
+            [styleClass]="formFavor.valid ? 'p-button-success': 'p-button-danger'"
+            [disabled]="formFavor.invalid || formFavor.pristine"
           ></p-button>
         </div>
       </div>
