--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -33,7 +33,7 @@
             <label htmlFor="email">Email</label>
           </span>
         <span class="p-float-label mt-4">
-            <input pInputText id="telefono" type="tel" class="w-full" aria-describedby="telefono-ayuda" formControlName="telefono">
+            <input pInputText id="telefono" type="tel" autofocus class="w-full" maxlength="9" aria-describedby="telefono-ayuda" formControlName="telefono">
             <label htmlFor="telefono">Teléfono de contacto</label>
         </span>
       </div>
@@ -42,12 +42,12 @@
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
         <div class="gap-2">
           <span class="p-float-label mt-4">
-              <input pInputText id="descripcion" type="text" maxlength="20" class="w-full" aria-describedby="descripcion-ayuda" formControlName="descripcion">
+              <input pInputText id="descripcion" type="text" maxlength="20" class="w-full" aria-describedby="descripcion-ayuda" (keyup.enter)="marcarTodosLosCampos()" formControlName="descripcion">
               <label htmlFor="descripcion">Título</label>
               <small *ngIf="esCampoInvalido('descripcion')" style="color: #e24c4c" id="descripcion-ayuda">Introduzca el título</small>
           </span>
           <span class="p-float-label my-4">
-              <input pInputText id="foto" type="text" class="w-full" aria-describedby="foto-ayuda" formControlName="foto">
+              <input pInputText id="foto" type="text" class="w-full" aria-describedby="foto-ayuda" (keyup.enter)="marcarTodosLosCampos()" formControlName="foto">
               <label htmlFor="foto">Foto</label>
               <small *ngIf="esCampoInvalido('foto')" style="color: #e24c4c" id="foto-ayuda">Introduzca una foto</small>
           </span>
