Modificado nav.component.ts para que get usuarioActivo() devuelva un usuario, en vez de el servicio. Modificado nav.component.html para utilizar correctamente esta modificación.

--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -6,8 +6,8 @@
 
   <!--Opciones de navegación-->
   <ng-template pTemplate="end">
-        <div *ngIf="usuarioActivo.usuarioActivo?.nombre != '' && usuarioActivo.usuarioActivo?.nombre != undefined">
-          <p-tag styleClass="p-2" [rounded]="true">{{"Bienvenido, " + this.usuarioActivo.usuarioActivo?.nombre}}</p-tag>
+        <div *ngIf="usuarioActivo?.nombre != '' && usuarioActivo?.nombre != undefined">
+          <p-tag styleClass="p-2" [rounded]="true">{{"Bienvenido, " + this.usuarioActivo?.nombre}}</p-tag>
         </div>
   </ng-template>
 </p-menubar>
