--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,32 +1,39 @@
 .footer {
   position: fixed;
-  width: 100%;
+  width: calc(100% - 1rem);
   bottom: 0;
+  margin: .1rem;
   background-color: var(--surface-a);
 }
 
+@media (max-width: 850px){
+
+}
+@media (min-width: 851px){
+
+}
+
+
+
+
 /* Ocultar en pantallas pequeñas */
-@media (min-width: 120px) and (max-width: 767px)  {
-  .hidden-sm {
-    display: none;
-  }
-}
+/*@media (min-width: 120px) and (max-width: 767px)  {
 
+}
++/
 /* Ocultar en pantallas grandes */
+/*
 @media (min-width: 1200px) {
-  .hidden-lg {
-    display: none;
-  }
-}
 
+}
+*/
 /* Ocultar en pantallas medianas */
+/*
 @media (min-width: 768px) and (max-width: 1199px) {
-  .hidden-md {
-    display: none;
-  }
+
 }
 
-
+*/
 
 
 
