--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: .3rem;
+  padding: 0rem;
+  margin-bottom: 4rem; /* Esto es para que el footer no oculte el final del body */
+}
