Modificado parcialmente mensaje de Terminos. Hay que seguir modificandolo, y revisar los demas botones del footer.

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -189,14 +189,14 @@
   <br>
   <hr/>
   <p>Este documento contiene las Condiciones que regulan el uso de este Sitio Web y el contrato que os vincula a
-    RoomSwapp y a ti. Estas Condiciones establecen los derechos y obligaciones de todos los usuarios y RoomSwapp, en
-    relación con los productos/servicios que ofrecemos a través de este Sitio Web. Te rogamos que leas atentamente las
-    presentes Condiciones y nuestra Política de Privacidad antes de finalizar un pedido. Al utilizar este Sitio Web o
-    hacer un pedido a través del mismo, consientes en quedar vinculado por estas Condiciones y por nuestra Política de
-    Privacidad, por lo que, si no estas de acuerdo con todas las Condiciones y con la Política de Privacidad, no debes
-    hacer ningún pedido. Estas Condiciones podrían ser modificadas, por lo que debes leerlas antes de efectuar cada
-    pedido. Si tienes alguna pregunta relacionada con las condiciones de compra o la política de privacidad puedes
-    consultar nuestro Sitio Web o ponerte en contacto con nosotros, a través de nuestro formulario de contacto.
+    RoomSwapp y a ti.
+    Estas Condiciones establecen los derechos y obligaciones de todos los usuarios y RoomSwapp, en relación con los
+    productos/servicios que ofrecemos a través de este Sitio Web.
+    Te rogamos que leas atentamente las presentes Condiciones y nuestra Política de Privacidad. Al utilizar este
+    Sitio Web, consientes en quedar vinculado por estas Condiciones y por nuestra Política de Privacidad.
+    Estas Condiciones podrían ser modificadas, por lo que debes leerlas antes de interactuar con la web.
+    Si tienes alguna pregunta relacionada con las condiciones de compra o la política de privacidad puedes consultar
+    nuestro Sitio Web o ponerte en contacto con nosotros, a través de nuestro formulario de contacto.
   </p>
   <br/>
   <hr/>
