Cambios de Jesus en registro.component.html, filtros.component.html e index.html

--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -103,7 +103,7 @@
             <br>
             <small *ngIf="!comprobarClave()" style="color: #e24c4c" id="usuarioClave2-ayuda">La contraseña no coinciden</small>
         </span>
-        <div class="flex justify-content-end flex-wrap p-3 gap-2">
+        <div class="flex justify-content-end flex-wrap p-3 gap-2 mt-8">
           <p-toast position="top-center"></p-toast>
           <div class="flex align-items-center justify-content-center">
             <p-button
