medoficiacion en la tarjeta filtro

--- a/src/app/shared/components/filtros/filtros.component.html
+++ b/src/app/shared/components/filtros/filtros.component.html
@@ -46,7 +46,9 @@
             <div class="flex justify-content-end mt-2">
               <p-button styleClass="p-button-sm p-button-raised p-button-secondary" (click)="abrirDialogoContacto(favor)" label="Contactar"></p-button>
             </div>
-            <p-dialog [header]="favorDialogo?.descripcion" [maximizable]="true" [(visible)]="dialogoContactar" [style]="{width: '50vw'}" >
+          </ng-template>
+        </p-card>
+            <p-dialog [modal]="true" [header]="favorDialogo?.descripcion" [maximizable]="true" [(visible)]="dialogoContactar" [style]="{width: '50vw'}" >
               <div *ngIf="favorDialogo != null">
                 <p>Nombre: {{favorDialogo.usuario.nombre}}</p>
                 <p>Provincia: {{favorDialogo.usuario.direccion.provincia.nombre}}</p>
@@ -55,8 +57,6 @@
                 <p>Telefono: {{favorDialogo.telefono}}</p>
               </div>
             </p-dialog>
-          </ng-template>
-        </p-card>
       </div>
     </ng-container>
   </div>
