añadido el boton de atras en registro.component.html y modificaciones en insertar-favor.component.ts, insertar-favor.component.html y login.component.html

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -36,6 +36,6 @@
     <div class="field col-6">
       <p-button (click)="cerrarDialogo()" label="Salir"></p-button>
     </div>
-      <span>¿No tienes una cuenta? <a href="auth/registro"> Regístrate</a></span>
+      <span>¿No tienes una cuenta? <a routerLink="/auth/registro"> Regístrate</a></span>
   </div>
 </p-dialog>
