--- a/src/app/shared/components/insertar-favor/insertar-favor.component.html
+++ b/src/app/shared/components/insertar-favor/insertar-favor.component.html
@@ -42,9 +42,8 @@
         <p class="bg-gray-200 font-bold p-2 border-round-md"><i class="pi pi-filter"></i> Opciones</p>
         <div class="gap-2">
           <span class="p-float-label mt-4">
-              <input pInputText id="descripcion" type="text" maxlength="20" class="w-full" aria-describedby="descripcion-ayuda" (keyup.enter)="marcarTodosLosCampos()" formControlName="descripcion">
-              <label for="descripcion">Título</label>
-              <small *ngIf="esCampoInvalido('descripcion')" style="color: #e24c4c" id="descripcion-ayuda">Introduzca el título</small>
+            <p-dropdown placeholder="Elige una opción" styleClass="w-full" aria-describedby="descripcion-ayuda" appendTo="body" (keyup.enter)="marcarTodosLosCampos()" formControlName="descripcion" [options]="titulos"></p-dropdown>
+            <label htmlFor="descripcion">Elige un título</label>
           </span>
           <span class="p-float-label my-4">
               <input pInputText id="foto" type="text" class="w-full" aria-describedby="foto-ayuda" (keyup.enter)="marcarTodosLosCampos()" formControlName="foto">
